--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
-    "tableify": "^1.1.1",
+    "hanzi-writer": "^3.4.0",
     "tablesort": "^5.3.0"
   }
 }
