--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"prettier": "^2.8.1",
 		"sass": "^1.57.1",
 		"tailwindcss": "^3.2.4",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"vite-plugin-pwa": "^0.16.3"
 	},
 	"dependencies": {
 		"a11y-dialog": "^7.5.2",
