--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 		"build": "vite build",
 		"preview": "vite preview"
 	},
+	"volta": {
+		"node": "18.18.0"
+	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.13",
 		"eslint": "^8.31.0",
@@ -19,7 +22,7 @@
 		"prettier": "^2.8.1",
 		"sass": "^1.57.1",
 		"tailwindcss": "^3.2.4",
-		"vite": "^4.0.0",
+		"vite": "^4.4.9",
 		"vite-plugin-pwa": "^0.16.3"
 	},
 	"dependencies": {
